# test012

./: .gitignore  Cargo.toml  README.md
data/: test_key.json
examples/: config.yaml  sample_data.json
src/: cli.rs  config.rs  error.rs  http.rs  lib.rs  logging.rs  main.rs
src/storage/: storage.rs
tests/: integration_tests.rs
