[package]
name = "rust-advanced-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An advanced CLI tool demonstrating Rust best practices"
license = "MIT"
repository = "https://github.com/xXT10Xx/test012"
keywords = ["cli", "async", "config", "logging"]
categories = ["command-line-utilities"]

[[bin]]
name = "rcli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
